src/parser/parser.js
module.exports = (function() {
  /*
   * Generated by PEG.js 0.8.0.
   *
   * http://pegjs.majda.cz/
   */

  function peg$subclass(child, parent) {
    function ctor() { this.constructor = child; }
    ctor.prototype = parent.prototype;
    child.prototype = new ctor();
  }

  function SyntaxError(message, expected, found, offset, line, column) {
    this.message  = message;
    this.expected = expected;
    this.found    = found;
    this.offset   = offset;
    this.line     = line;
    this.column   = column;

    this.name     = "SyntaxError";
  }

  peg$subclass(SyntaxError, Error);

  function parse(input) {
    var options = arguments.length > 1 ? arguments[1] : {},

        peg$FAILED = {},

        peg$startRuleFunctions = { start: peg$parsestart },
        peg$startRuleFunction  = peg$parsestart,

        peg$c0 = peg$FAILED,
        peg$c1 = [],
        peg$c2 = function(tags) {
                return tags;
            },
        peg$c3 = function(tag) { return tag; },
        peg$c4 = function(start, rest) {
                return rest.unshift(start) && rest;
            },
        peg$c5 = function(parent, children) {
                parent.children = (parent.children || []).concat(children);
                return parent;
            },
        peg$c6 = function(parent, children) {
                return children.unshift(parent) && children.join('\n');
            },
        peg$c7 = function(tag) {
                return parents.push(tag) && tag;
            },
        peg$c8 = function(indent) {
                return indent === parent().indent + 1 ? true : parents.pop() && false;
            },
        peg$c9 = void 0,
        peg$c10 = function(indent, tag) {
                return tag;
            },
        peg$c11 = null,
        peg$c12 = function(name, clazz, id, clazz2) {
                return name || clazz.length > 0 || id || clazz2.length > 0
            },
        peg$c13 = function(t) { return t; },
        peg$c14 = function(name, clazz, id, clazz2, attrs, text) {
                return { name: name, indent: IDT, clazz: clazz.concat(clazz2), id: id, attrs: attrs, text: text };
            },
        peg$c15 = ".",
        peg$c16 = { type: "literal", value: ".", description: "\".\"" },
        peg$c17 = function(name) {
                return name;
            },
        peg$c18 = "#",
        peg$c19 = { type: "literal", value: "#", description: "\"#\"" },
        peg$c20 = function(indent) {
                return IDT = indent || 0;
            },
        peg$c21 = function() {
                IDT = 0;
            },
        peg$c22 = "(",
        peg$c23 = { type: "literal", value: "(", description: "\"(\"" },
        peg$c24 = ")",
        peg$c25 = { type: "literal", value: ")", description: "\")\"" },
        peg$c26 = function(attrs) {
                var result = {}, i;
                for (i = 0; i < attrs.length; i ++) if(attrs[i]) result[attrs[i].name] = attrs[i].value;
                return result;
            },
        peg$c27 = function(l) { return l; },
        peg$c28 = function(first, rest) {
                return rest.unshift(first) && rest;
            },
        peg$c29 = { type: "other", description: "Tag attribute line" },
        peg$c30 = function(indent) {
                return indent === IDT + 1
            },
        peg$c31 = "=",
        peg$c32 = { type: "literal", value: "=", description: "\"=\"" },
        peg$c33 = function(str) {return str;},
        peg$c34 = function(indent, name, value) {
                return { name: name, value: value };
            },
        peg$c35 = { type: "other", description: "Tag attribute line end" },
        peg$c36 = function(indent) {
                if (indent === IDT) return true;
                return false;
            },
        peg$c37 = function(indent) {
                return undefined;
            },
        peg$c38 = function(ws) {
                return IDT === 0 && ws.length === 0;
            },
        peg$c39 = function(ws) {
                return undefined;
            },
        peg$c40 = function(a) { return a;},
        peg$c41 = { type: "other", description: "Inline tag attribute definition" },
        peg$c42 = function(str) { return str;},
        peg$c43 = function(name, value) {
                return { name: name, value: value };
            },
        peg$c44 = { type: "other", description: "Inline tag attribute seperator" },
        peg$c45 = ",",
        peg$c46 = { type: "literal", value: ",", description: "\",\"" },
        peg$c47 = { type: "other", description: "Tag attribute line indent" },
        peg$c48 = function(indent) {
                return indent;
            },
        peg$c49 = function(text) {
                return text;
            },
        peg$c50 = function(first, rest) {
                return rest.unshift(first) && rest.join('\n');
            },
        peg$c51 = { type: "other", description: "Tag text line" },
        peg$c52 = function(indent) {
                return indent.length >= (IDT + 1) * IDT_TOK.length;
            },
        peg$c53 = function(indent, text) {
                return indent + text;
            },
        peg$c54 = { type: "other", description: "Tag text line indent" },
        peg$c55 = function(indent) {
                return indent; 
            },
        peg$c56 = function(indent) {
                return indent === parent().indent + 1;
            },
        peg$c57 = function(indent, text) {
                return text;
            },
        peg$c58 = "|.",
        peg$c59 = { type: "literal", value: "|.", description: "\"|.\"" },
        peg$c60 = "|",
        peg$c61 = { type: "literal", value: "|", description: "\"|\"" },
        peg$c62 = function(l) {return l;},
        peg$c63 = function(indent, text) {
                return indent.slice(IDT_TOK.length) + text;
            },
        peg$c64 = { type: "other", description: "Pipeline indent" },
        peg$c65 = { type: "other", description: "Blank line" },
        peg$c66 = { type: "other", description: "Text to end of line" },
        peg$c67 = { type: "any", description: "any character" },
        peg$c68 = function() {
                return text();
            },
        peg$c69 = { type: "other", description: "Identifier" },
        peg$c70 = /^[a-zA-Z$@_]/,
        peg$c71 = { type: "class", value: "[a-zA-Z$@_]", description: "[a-zA-Z$@_]" },
        peg$c72 = /^[a-zA-Z0-9$_\-]/,
        peg$c73 = { type: "class", value: "[a-zA-Z0-9$_\\-]", description: "[a-zA-Z0-9$_\\-]" },
        peg$c74 = function(start, rest) {
                return start + rest;
            },
        peg$c75 = { type: "other", description: "End of line" },
        peg$c76 = "\n",
        peg$c77 = { type: "literal", value: "\n", description: "\"\\n\"" },
        peg$c78 = "\r",
        peg$c79 = { type: "literal", value: "\r", description: "\"\\r\"" },
        peg$c80 = "\r\n",
        peg$c81 = { type: "literal", value: "\r\n", description: "\"\\r\\n\"" },
        peg$c82 = { type: "other", description: "Whitespace" },
        peg$c83 = "\t",
        peg$c84 = { type: "literal", value: "\t", description: "\"\\t\"" },
        peg$c85 = " ",
        peg$c86 = { type: "literal", value: " ", description: "\" \"" },
        peg$c87 = "\x0B",
        peg$c88 = { type: "literal", value: "\x0B", description: "\"\\x0B\"" },
        peg$c89 = "\f",
        peg$c90 = { type: "literal", value: "\f", description: "\"\\f\"" },
        peg$c91 = { type: "other", description: "Indents" },
        peg$c92 = function(spaces) {
                if (IDT_TOK === null) IDT_TOK = spaces;
                return spaces.length % IDT_TOK.length == 0;
            },
        peg$c93 = function(spaces) {
                return spaces.length / IDT_TOK.length;
            },
        peg$c94 = function(tabs) {
                if (IDT_TOK === null) IDT_TOK = '\t';
                return IDT_TOK === '\t';
            },
        peg$c95 = function(tabs) {
                return tabs.length;
            },
        peg$c96 = { type: "other", description: "Quoted string" },
        peg$c97 = "\"",
        peg$c98 = { type: "literal", value: "\"", description: "\"\\\"\"" },
        peg$c99 = function(chars) { return chars; },
        peg$c100 = "'",
        peg$c101 = { type: "literal", value: "'", description: "\"'\"" },
        peg$c102 = { type: "other", description: "Double quoted string char" },
        peg$c103 = "\\",
        peg$c104 = { type: "literal", value: "\\", description: "\"\\\\\"" },
        peg$c105 = function() { return text(); },
        peg$c106 = function(char) { return char; },
        peg$c107 = { type: "other", description: "Single quoted string char" },
        peg$c108 = function() {return text(); },
        peg$c109 = function(char) {return char; },
        peg$c110 = { type: "other", description: "Escaped char" },
        peg$c111 = "0",
        peg$c112 = { type: "literal", value: "0", description: "\"0\"" },
        peg$c113 = /^[0-9]/,
        peg$c114 = { type: "class", value: "[0-9]", description: "[0-9]" },
        peg$c115 = function() { return '\0' },
        peg$c116 = /^[bnfrt]/,
        peg$c117 = { type: "class", value: "[bnfrt]", description: "[bnfrt]" },
        peg$c118 = function(c) { return '\\' + c; },
        peg$c119 = "b",
        peg$c120 = { type: "literal", value: "b", description: "\"b\"" },
        peg$c121 = function() { return '\x0B' },

        peg$currPos          = 0,
        peg$reportedPos      = 0,
        peg$cachedPos        = 0,
        peg$cachedPosDetails = { line: 1, column: 1, seenCR: false },
        peg$maxFailPos       = 0,
        peg$maxFailExpected  = [],
        peg$silentFails      = 0,

        peg$result;

    if ("startRule" in options) {
      if (!(options.startRule in peg$startRuleFunctions)) {
        throw new Error("Can't start parsing from rule \"" + options.startRule + "\".");
      }

      peg$startRuleFunction = peg$startRuleFunctions[options.startRule];
    }

    function text() {
      return input.substring(peg$reportedPos, peg$currPos);
    }

    function offset() {
      return peg$reportedPos;
    }

    function line() {
      return peg$computePosDetails(peg$reportedPos).line;
    }

    function column() {
      return peg$computePosDetails(peg$reportedPos).column;
    }

    function expected(description) {
      throw peg$buildException(
        null,
        [{ type: "other", description: description }],
        peg$reportedPos
      );
    }

    function error(message) {
      throw peg$buildException(message, null, peg$reportedPos);
    }

    function peg$computePosDetails(pos) {
      function advance(details, startPos, endPos) {
        var p, ch;

        for (p = startPos; p < endPos; p++) {
          ch = input.charAt(p);
          if (ch === "\n") {
            if (!details.seenCR) { details.line++; }
            details.column = 1;
            details.seenCR = false;
          } else if (ch === "\r" || ch === "\u2028" || ch === "\u2029") {
            details.line++;
            details.column = 1;
            details.seenCR = true;
          } else {
            details.column++;
            details.seenCR = false;
          }
        }
      }

      if (peg$cachedPos !== pos) {
        if (peg$cachedPos > pos) {
          peg$cachedPos = 0;
          peg$cachedPosDetails = { line: 1, column: 1, seenCR: false };
        }
        advance(peg$cachedPosDetails, peg$cachedPos, pos);
        peg$cachedPos = pos;
      }

      return peg$cachedPosDetails;
    }

    function peg$fail(expected) {
      if (peg$currPos < peg$maxFailPos) { return; }

      if (peg$currPos > peg$maxFailPos) {
        peg$maxFailPos = peg$currPos;
        peg$maxFailExpected = [];
      }

      peg$maxFailExpected.push(expected);
    }

    function peg$buildException(message, expected, pos) {
      function cleanupExpected(expected) {
        var i = 1;

        expected.sort(function(a, b) {
          if (a.description < b.description) {
            return -1;
          } else if (a.description > b.description) {
            return 1;
          } else {
            return 0;
          }
        });

        while (i < expected.length) {
          if (expected[i - 1] === expected[i]) {
            expected.splice(i, 1);
          } else {
            i++;
          }
        }
      }

      function buildMessage(expected, found) {
        function stringEscape(s) {
          function hex(ch) { return ch.charCodeAt(0).toString(16).toUpperCase(); }

          return s
            .replace(/\\/g,   '\\\\')
            .replace(/"/g,    '\\"')
            .replace(/\x08/g, '\\b')
            .replace(/\t/g,   '\\t')
            .replace(/\n/g,   '\\n')
            .replace(/\f/g,   '\\f')
            .replace(/\r/g,   '\\r')
            .replace(/[\x00-\x07\x0B\x0E\x0F]/g, function(ch) { return '\\x0' + hex(ch); })
            .replace(/[\x10-\x1F\x80-\xFF]/g,    function(ch) { return '\\x'  + hex(ch); })
            .replace(/[\u0180-\u0FFF]/g,         function(ch) { return '\\u0' + hex(ch); })
            .replace(/[\u1080-\uFFFF]/g,         function(ch) { return '\\u'  + hex(ch); });
        }

        var expectedDescs = new Array(expected.length),
            expectedDesc, foundDesc, i;

        for (i = 0; i < expected.length; i++) {
          expectedDescs[i] = expected[i].description;
        }

        expectedDesc = expected.length > 1
          ? expectedDescs.slice(0, -1).join(", ")
              + " or "
              + expectedDescs[expected.length - 1]
          : expectedDescs[0];

        foundDesc = found ? "\"" + stringEscape(found) + "\"" : "end of input";

        return "Expected " + expectedDesc + " but " + foundDesc + " found.";
      }

      var posDetails = peg$computePosDetails(pos),
          found      = pos < input.length ? input.charAt(pos) : null;

      if (expected !== null) {
        cleanupExpected(expected);
      }

      return new SyntaxError(
        message !== null ? message : buildMessage(expected, found),
        expected,
        found,
        pos,
        posDetails.line,
        posDetails.column
      );
    }

    function peg$parsestart() {
      var s0, s1, s2, s3, s4, s5;

      s0 = peg$currPos;
      s1 = [];
      s2 = peg$parseblank_line();
      while (s2 !== peg$FAILED) {
        s1.push(s2);
        s2 = peg$parseblank_line();
      }
      if (s1 !== peg$FAILED) {
        s2 = peg$parsetags();
        if (s2 !== peg$FAILED) {
          s3 = [];
          s4 = peg$parseblank_line();
          while (s4 !== peg$FAILED) {
            s3.push(s4);
            s4 = peg$parseblank_line();
          }
          if (s3 !== peg$FAILED) {
            s4 = [];
            s5 = peg$parse_();
            while (s5 !== peg$FAILED) {
              s4.push(s5);
              s5 = peg$parse_();
            }
            if (s4 !== peg$FAILED) {
              peg$reportedPos = s0;
              s1 = peg$c2(s2);
              s0 = s1;
            } else {
              peg$currPos = s0;
              s0 = peg$c0;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$c0;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$c0;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$c0;
      }

      return s0;
    }

    function peg$parsetags() {
      var s0, s1, s2, s3, s4, s5;

      s0 = peg$currPos;
      s1 = peg$parsetag();
      if (s1 !== peg$FAILED) {
        s2 = [];
        s3 = peg$currPos;
        s4 = peg$parsetag_sep();
        if (s4 !== peg$FAILED) {
          s5 = peg$parsetag();
          if (s5 !== peg$FAILED) {
            peg$reportedPos = s3;
            s4 = peg$c3(s5);
            s3 = s4;
          } else {
            peg$currPos = s3;
            s3 = peg$c0;
          }
        } else {
          peg$currPos = s3;
          s3 = peg$c0;
        }
        while (s3 !== peg$FAILED) {
          s2.push(s3);
          s3 = peg$currPos;
          s4 = peg$parsetag_sep();
          if (s4 !== peg$FAILED) {
            s5 = peg$parsetag();
            if (s5 !== peg$FAILED) {
              peg$reportedPos = s3;
              s4 = peg$c3(s5);
              s3 = s4;
            } else {
              peg$currPos = s3;
              s3 = peg$c0;
            }
          } else {
            peg$currPos = s3;
            s3 = peg$c0;
          }
        }
        if (s2 !== peg$FAILED) {
          peg$reportedPos = s0;
          s1 = peg$c4(s1, s2);
          s0 = s1;
        } else {
          peg$currPos = s0;
          s0 = peg$c0;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$c0;
      }

      return s0;
    }

    function peg$parsetag() {
      var s0, s1, s2, s3;

      s0 = peg$currPos;
      s1 = peg$parsetag_parent();
      if (s1 !== peg$FAILED) {
        s2 = [];
        s3 = peg$parsetag_child();
        while (s3 !== peg$FAILED) {
          s2.push(s3);
          s3 = peg$parsetag_child();
        }
        if (s2 !== peg$FAILED) {
          peg$reportedPos = s0;
          s1 = peg$c5(s1, s2);
          s0 = s1;
        } else {
          peg$currPos = s0;
          s0 = peg$c0;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$c0;
      }
      if (s0 === peg$FAILED) {
        s0 = peg$currPos;
        s1 = peg$parsepipeline_parent();
        if (s1 !== peg$FAILED) {
          s2 = [];
          s3 = peg$parsepipeline_child();
          while (s3 !== peg$FAILED) {
            s2.push(s3);
            s3 = peg$parsepipeline_child();
          }
          if (s2 !== peg$FAILED) {
            peg$reportedPos = s0;
            s1 = peg$c6(s1, s2);
            s0 = s1;
          } else {
            peg$currPos = s0;
            s0 = peg$c0;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$c0;
        }
      }

      return s0;
    }

    function peg$parsetag_parent() {
      var s0, s1;

      s0 = peg$currPos;
      s1 = peg$parsetag_def();
      if (s1 !== peg$FAILED) {
        peg$reportedPos = s0;
        s1 = peg$c7(s1);
      }
      s0 = s1;

      return s0;
    }

    function peg$parsetag_child() {
      var s0, s1, s2, s3, s4;

      s0 = peg$currPos;
      s1 = peg$parsetag_sep();
      if (s1 !== peg$FAILED) {
        s2 = peg$parsetag_indent();
        if (s2 !== peg$FAILED) {
          peg$reportedPos = peg$currPos;
          s3 = peg$c8(s2);
          if (s3) {
            s3 = peg$c9;
          } else {
            s3 = peg$c0;
          }
          if (s3 !== peg$FAILED) {
            s4 = peg$parsetag();
            if (s4 !== peg$FAILED) {
              peg$reportedPos = s0;
              s1 = peg$c10(s2, s4);
              s0 = s1;
            } else {
              peg$currPos = s0;
              s0 = peg$c0;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$c0;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$c0;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$c0;
      }

      return s0;
    }

    function peg$parsetag_def() {
      var s0, s1, s2, s3, s4, s5, s6, s7, s8, s9;

      s0 = peg$currPos;
      s1 = peg$parsetag_indent();
      if (s1 === peg$FAILED) {
        s1 = peg$c11;
      }
      if (s1 !== peg$FAILED) {
        s2 = peg$parseidentifier();
        if (s2 === peg$FAILED) {
          s2 = peg$c11;
        }
        if (s2 !== peg$FAILED) {
          s3 = [];
          s4 = peg$parsetag_class();
          while (s4 !== peg$FAILED) {
            s3.push(s4);
            s4 = peg$parsetag_class();
          }
          if (s3 !== peg$FAILED) {
            s4 = peg$parsetag_id();
            if (s4 === peg$FAILED) {
              s4 = peg$c11;
            }
            if (s4 !== peg$FAILED) {
              s5 = [];
              s6 = peg$parsetag_class();
              while (s6 !== peg$FAILED) {
                s5.push(s6);
                s6 = peg$parsetag_class();
              }
              if (s5 !== peg$FAILED) {
                peg$reportedPos = peg$currPos;
                s6 = peg$c12(s2, s3, s4, s5);
                if (s6) {
                  s6 = peg$c9;
                } else {
                  s6 = peg$c0;
                }
                if (s6 !== peg$FAILED) {
                  s7 = peg$parsetag_attrs();
                  if (s7 === peg$FAILED) {
                    s7 = peg$c11;
                  }
                  if (s7 !== peg$FAILED) {
                    s8 = peg$currPos;
                    s9 = peg$parsetag_text();
                    if (s9 !== peg$FAILED) {
                      peg$reportedPos = s8;
                      s9 = peg$c13(s9);
                    }
                    s8 = s9;
                    if (s8 === peg$FAILED) {
                      s8 = peg$c11;
                    }
                    if (s8 !== peg$FAILED) {
                      peg$reportedPos = s0;
                      s1 = peg$c14(s2, s3, s4, s5, s7, s8);
                      s0 = s1;
                    } else {
                      peg$currPos = s0;
                      s0 = peg$c0;
                    }
                  } else {
                    peg$currPos = s0;
                    s0 = peg$c0;
                  }
                } else {
                  peg$currPos = s0;
                  s0 = peg$c0;
                }
              } else {
                peg$currPos = s0;
                s0 = peg$c0;
              }
            } else {
              peg$currPos = s0;
              s0 = peg$c0;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$c0;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$c0;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$c0;
      }

      return s0;
    }

    function peg$parsetag_class() {
      var s0, s1, s2;

      s0 = peg$currPos;
      if (input.charCodeAt(peg$currPos) === 46) {
        s1 = peg$c15;
        peg$currPos++;
      } else {
        s1 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c16); }
      }
      if (s1 !== peg$FAILED) {
        s2 = peg$parseidentifier();
        if (s2 !== peg$FAILED) {
          peg$reportedPos = s0;
          s1 = peg$c17(s2);
          s0 = s1;
        } else {
          peg$currPos = s0;
          s0 = peg$c0;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$c0;
      }

      return s0;
    }

    function peg$parsetag_id() {
      var s0, s1, s2;

      s0 = peg$currPos;
      if (input.charCodeAt(peg$currPos) === 35) {
        s1 = peg$c18;
        peg$currPos++;
      } else {
        s1 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c19); }
      }
      if (s1 !== peg$FAILED) {
        s2 = peg$parseidentifier();
        if (s2 !== peg$FAILED) {
          peg$reportedPos = s0;
          s1 = peg$c17(s2);
          s0 = s1;
        } else {
          peg$currPos = s0;
          s0 = peg$c0;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$c0;
      }

      return s0;
    }

    function peg$parsetag_indent() {
      var s0, s1;

      s0 = peg$currPos;
      s1 = peg$parseidt();
      if (s1 !== peg$FAILED) {
        peg$reportedPos = s0;
        s1 = peg$c20(s1);
      }
      s0 = s1;

      return s0;
    }

    function peg$parsetag_sep() {
      var s0, s1, s2, s3, s4;

      s0 = peg$currPos;
      s1 = [];
      s2 = peg$parse_();
      while (s2 !== peg$FAILED) {
        s1.push(s2);
        s2 = peg$parse_();
      }
      if (s1 !== peg$FAILED) {
        s2 = peg$parseeol();
        if (s2 !== peg$FAILED) {
          s3 = [];
          s4 = peg$parseblank_line();
          while (s4 !== peg$FAILED) {
            s3.push(s4);
            s4 = peg$parseblank_line();
          }
          if (s3 !== peg$FAILED) {
            peg$reportedPos = s0;
            s1 = peg$c21();
            s0 = s1;
          } else {
            peg$currPos = s0;
            s0 = peg$c0;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$c0;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$c0;
      }

      return s0;
    }

    function peg$parsetag_attrs() {
      var s0, s1, s2, s3, s4, s5;

      s0 = peg$currPos;
      s1 = [];
      s2 = peg$parse_();
      while (s2 !== peg$FAILED) {
        s1.push(s2);
        s2 = peg$parse_();
      }
      if (s1 !== peg$FAILED) {
        if (input.charCodeAt(peg$currPos) === 40) {
          s2 = peg$c22;
          peg$currPos++;
        } else {
          s2 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$c23); }
        }
        if (s2 !== peg$FAILED) {
          s3 = peg$parsetag_attrs_inline();
          if (s3 === peg$FAILED) {
            s3 = peg$parsetag_attrs_lines();
          }
          if (s3 !== peg$FAILED) {
            s4 = [];
            s5 = peg$parse_();
            while (s5 !== peg$FAILED) {
              s4.push(s5);
              s5 = peg$parse_();
            }
            if (s4 !== peg$FAILED) {
              if (input.charCodeAt(peg$currPos) === 41) {
                s5 = peg$c24;
                peg$currPos++;
              } else {
                s5 = peg$FAILED;
                if (peg$silentFails === 0) { peg$fail(peg$c25); }
              }
              if (s5 !== peg$FAILED) {
                peg$reportedPos = s0;
                s1 = peg$c26(s3);
                s0 = s1;
              } else {
                peg$currPos = s0;
                s0 = peg$c0;
              }
            } else {
              peg$currPos = s0;
              s0 = peg$c0;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$c0;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$c0;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$c0;
      }

      return s0;
    }

    function peg$parsetag_attrs_lines() {
      var s0, s1, s2, s3, s4, s5, s6, s7;

      s0 = peg$currPos;
      s1 = [];
      s2 = peg$parse_();
      while (s2 !== peg$FAILED) {
        s1.push(s2);
        s2 = peg$parse_();
      }
      if (s1 !== peg$FAILED) {
        s2 = peg$parseeol();
        if (s2 !== peg$FAILED) {
          s3 = peg$parsetal();
          if (s3 !== peg$FAILED) {
            s4 = [];
            s5 = peg$currPos;
            s6 = peg$parseeol();
            if (s6 !== peg$FAILED) {
              s7 = peg$parsetal();
              if (s7 !== peg$FAILED) {
                peg$reportedPos = s5;
                s6 = peg$c27(s7);
                s5 = s6;
              } else {
                peg$currPos = s5;
                s5 = peg$c0;
              }
            } else {
              peg$currPos = s5;
              s5 = peg$c0;
            }
            while (s5 !== peg$FAILED) {
              s4.push(s5);
              s5 = peg$currPos;
              s6 = peg$parseeol();
              if (s6 !== peg$FAILED) {
                s7 = peg$parsetal();
                if (s7 !== peg$FAILED) {
                  peg$reportedPos = s5;
                  s6 = peg$c27(s7);
                  s5 = s6;
                } else {
                  peg$currPos = s5;
                  s5 = peg$c0;
                }
              } else {
                peg$currPos = s5;
                s5 = peg$c0;
              }
            }
            if (s4 !== peg$FAILED) {
              peg$reportedPos = s0;
              s1 = peg$c28(s3, s4);
              s0 = s1;
            } else {
              peg$currPos = s0;
              s0 = peg$c0;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$c0;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$c0;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$c0;
      }

      return s0;
    }

    function peg$parsetal() {
      var s0, s1, s2, s3, s4, s5, s6, s7, s8;
